--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
             <a href="#"> Third Graded </a>
             <br>
             <a href="#"> Access to our Project </a>
+            <br>
+            <a href="./public/Q3_2GMagnesiumVargas.html"> 3rd QTR - 2nd Graded Exercise </a>
         </nav>
     </header>
 
